--- a/client/src/Components/Home/Home.module.css
+++ b/client/src/Components/Home/Home.module.css
@@ -1,21 +1,26 @@
-.cardsConteiner {
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  display: grid;
-  position: relative;
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
-  background-color: rgb(71, 130, 130);
-}
-.home {
-  background-color: gray;
+.ContenedorHome {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 40px;
+  background-image: url('../../Img/Fondo3.jpg'), url('../../Img/Fondo4.jpg'), url('../../Img/Fondo5.jpg');
+  background-repeat: no-repeat;
   background-size: cover;
-  min-height: 100vh;
-  min-width: 100vh;
-  margin: 0;
-  padding: 0;
+  background-position: center;
 }
-body {
-  height: 100%;
-  width: 100%;
+
+.TituloHome {
+  font-size: 40px;
+  color: #333333;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+  .ContenedorHome {
+    padding: 40px 20px;
+  }
+
+  .TituloHome {
+    font-size: 30px;
+  }
 }
