--- a/client/src/Components/Paginado/Paginado.module.css
+++ b/client/src/Components/Paginado/Paginado.module.css
@@ -1,33 +1,37 @@
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
-
 .mainDiv {
   display: flex;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .paginado {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    list-style-type: none;
-    color: white;
-    font-weight: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px;
+  list-style-type: none;
+  color: white;
+  font-weight: 100;
+  margin: 0;
 }
 
 .li {
-    border: 1px solid rgb(0, 128, 81);
-    padding: 0px 7px 0px 7px;
-    background-color: rgba(4, 4, 4, 0.752);
-    margin:  0px 7px 0px 7px;
-    width: 50px;
-    border-radius: 5px;
-    transition: .2s;
-    font-weight: bold;
-    font-family: 'Kaushan Script', cursive;
+  border: 1px solid rgb(0, 128, 81);
+  padding: 3px 7px;
+  background-color: rgba(4, 4, 4, 0.752);
+  margin: 0 3px;
+  width: 25px;
+  height: 25px;
+  border-radius: 5px;
+  transition: .2s;
+  font-weight: bold;
+  font-family: 'Kaushan Script', cursive;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.li:hover{
-    background-color: rgba(108, 108, 108, 0.653);
-    cursor: pointer;
+.li:hover {
+  background-color: rgba(108, 108, 108, 0.653);
+  cursor: pointer;
 }
